@@ -113,3 +113,5 @@ serial.port.osx.regex=(cu|tty)..*
 
 #Start data sources in parallel threads
 runtime.datasource.startupThreads=8
+#Log startup times for runtime manager
+runtime.datasource.logStartupMetrics=true
